[project]
name = "mrl-pipeline"
version = "0.1.0"
description = "Data pipeline for ingesting, standardizing, and aggregating results from MA points-eligible racing."
readme = "README.md"
authors = [
    { name = "Chris Stock", email = "chris.stock@emxc.org" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "typing",
    "prefect",
    "networkx",
    "duckdb",
    "pytz",
    "tqdm",
    "gspread",
    "gspread-dataframe",
    "google-api-python-client",
    "google-auth",
    "pytest",
    "grpcio==1.66.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://massnordic.org"

[tool.hatch.build.targets.wheel]
packages = ["src/mrl_pipeline"]

[tool.hatch.build.targets.sdist]
include = ["src/mrl_pipeline"]

[tool.ruff]
line-length = 88
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["I", "F", "E"]
